# houseaccount-ai-pricing

./: .env.example  .gitignore  AI_USAGE.md  BUILD_LOG.md  Makefile  README.md  package-lock.json  package.json
api/: .dockerignore  .gitignore  .railwayignore  .rubocop.yml  Dockerfile  Gemfile  railway.toml
api/app/clients/: model_service_client.rb  staging_client.rb
api/app/controllers/: application_controller.rb  errors_controller.rb  pricing_estimates_controller.rb
api/app/models/: request_log.rb
api/config/: application.rb  credentials.yml.enc  deploy.yml  routes.rb
api/config/environments/: production.rb
api/public/: index.html
demo/: script.md
design/: style-guide.md  tokens.json
docs/: API.md  DEPLOYMENT.md  MODELING_APPROACH.md  PRD-expanded.md  TEST_RESULTS.md
docs/reference/: HouseAccount_STYLE.md
model_service/: .railwayignore  pyproject.toml  railway.toml
model_service/model/: model.joblib  model_meta.json
model_service/pricing/: __init__.py  categories.py  confidence.py  data.py  estimator.py  evaluation.py  features.py  llm_scope.py  loader.py  model.py  schemas.py  scope.py  serving.py  training.py
model_service/scripts/: ablate_llm_scope.py  bakeoff.py  eda.py  train.py
model_service/service/: __init__.py  main.py
model_service/tests/: test_categories.py  test_confidence.py  test_estimator.py  test_llm_scope.py  test_model_eval.py  test_scope.py  test_service.py  test_serving.py
scripts/: capture_style.mjs  record_demo.mjs  secret_guard.sh  verify.sh  verify_live.mjs  verify_mockup.mjs
ui/: mockup.html
(+8 files in other folders)
