[project]
name = "houseaccount-pricing"
version = "1.0.0"
description = "HouseAccount AI pricing model service — features, model, conformal intervals, confidence."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "joblib>=1.4",
  "httpx>=0.27",
  "openai>=1.40",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11",
  "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pricing", "service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
